# mlops

./: README.md  action_test.py  main.py  ml_ops_project.py  pyproject.toml  requirements.txt  requirements_dev.txt  service_account_key.json  test_inference.json  use.py
.dvc/: config
.github/workflows/: action_test.yaml  tests.yaml
configs/: cpu_config.yaml  data_config.yaml  hyp_config.yaml  main_config.yaml  train_config.yaml
data/: data.xml.dvc
dockerfiles/: main.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.me
src/mlops/: data.py  evaluate.py  model.py  train.py  vertex_ai_run.py  vertex_ai_train.py
tests/: test_data.py
