[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.1.0"
description = "Proof of concept for MLops pipeline using a simple image classifier."
authors = [
  { name = "John Hansen", email = "jwhansen1996@gmail.com" },
]

keywords = ["machine learning", "MLOps", "image classification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.10.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
